--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+security.ignored=/**
+spring.security.enabled=false
+management.security.enabled=false
+security.basic.enabled=false
+ant_path_matcher
