--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# MySQL Configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
+#spring.datasource.username=root
+#spring.datasource.password=matiwariacik
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+#SWAGGER2 Configuration
 security.ignored=/**
 spring.security.enabled=false
 management.security.enabled=false
