--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
-#SWAGGER2 Configuration
+#SWAGGER2 Configuration with any security
 security.ignored=/**
 spring.security.enabled=false
 management.security.enabled=false
