Correct data structure

--- a/massageAngular/angular.json
+++ b/massageAngular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "massage": {
+    "massageAngular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/massage",
+            "outputPath": "dist/massage-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "massage:build:production"
+              "browserTarget": "massageAngular:build:production"
             },
             "development": {
-              "browserTarget": "massage:build:development"
+              "browserTarget": "massageAngular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "massage:build"
+            "browserTarget": "massageAngular:build"
           }
         },
         "test": {
@@ -99,6 +99,6 @@
     }
   },
   "cli": {
-    "analytics": "679cbfda-943b-4480-b57a-ea1bcf529cbd"
+    "analytics": false
   }
 }
