--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 # MySQL Configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
-#spring.datasource.username=root
-#spring.datasource.password=matiwariacik
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
+spring.datasource.url=jdbc:mysql://localhost:3306/massage
+spring.datasource.username=root
+spring.datasource.password=matiwariacik
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #SWAGGER2 Configuration with any security
 security.ignored=/**
