debug register form in client

--- a/server/main/resources/application.properties
+++ b/server/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.security.enabled=false
 management.security.enabled=false
 security.basic.enabled=false
 ant_path_matcher
+
+#JDBC
+spring.session.jdbc.initialize-schema: always
