--- a/server/main/resources/application.properties
+++ b/server/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.freemarker.check-template-location=false
 spring.profiles.active=development
 
 server.servlet-path=/loop-service
+
+#JWT
+jwt.secret=token
