--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,12 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
