--- a/server/main/resources/application.yml
+++ b/server/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
           connectiontimeout: 5000
           timeout: 3000
           writetimeout: 5000
+  mvc:
+    converters:
+      preferred-json-mapper: jackson
