--- a/server/main/resources/application.properties
+++ b/server/main/resources/application.properties
@@ -25,4 +25,6 @@ spring.profiles.active=development
 server.servlet-path=/loop-service
 
 #JWT
-jwt.secret=airbus
+jwt.secret=drinki
+api.client=https://localhost:4200
+api.server=https://localhost:8080
