--- a/server/main/resources/application.properties
+++ b/server/main/resources/application.properties
@@ -1,20 +1,21 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/massage
-spring.datasource.username=root
-spring.datasource.password=matiwariacik
+#spring.datasource.url=jdbc:mysql://localhost:3306/massage
+#spring.datasource.username=root
+#spring.datasource.password=matiwariacik
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #SWAGGER2 Configuration with any security
 security.ignored=/**
-spring.security.enabled=false
-management.security.enabled=false
+#spring.security.enabled=false
+#management.security.enabled=false
 security.basic.enabled=false
-ant_path_matcher
+#ant_path_matcher
 
 #JDBC
-spring.session.jdbc.initialize-schema: always
+#spring.session.jdbc.initialize-schema: always
 spring.jpa.open-in-view=true
 
 #FreeMarker
@@ -22,7 +23,7 @@ spring.freemarker.check-template-location=false
 
 spring.profiles.active=development
 
-server.servlet-path=/loop-service
+#server.servlet-path=/loop-service
 
 #JWT
 jwt.secret=drinki
