--- a/server/main/resources/application.properties
+++ b/server/main/resources/application.properties
@@ -2,10 +2,18 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/massage
 #spring.datasource.username=root
 #spring.datasource.password=matiwariacik
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=newuser
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
 spring.jpa.show-sql=true
 #update
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #SWAGGER2 Configuration with any security
 security.ignored=/**
