--- a/server/main/resources/application.yml
+++ b/server/main/resources/application.yml
@@ -19,12 +19,12 @@ spring:
     converters:
       preferred-json-mapper: jackson
 
-app:
-  dataSource:
-    postgres:
-      port: 5432
-      username: localhost
-      password: postgres
-      host: localhost
-      databaseName: coctails
-      jdbc-url: jdbc:postgresql://${app.dataSource.postgres.host}:${app.dataSource.postgres.port}/${app.dataSource.postgres.databaseName}
+#app:
+#  dataSource:
+#    postgres:
+#      port: 5432
+#      username: localhost
+#      password: postgres
+#      host: localhost
+#      databaseName: coctails
+#      jdbc-url: jdbc:postgresql://${app.dataSource.postgres.host}:${app.dataSource.postgres.port}/${app.dataSource.postgres.databaseName}
